// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should return 1 expense with a total of 1200 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $12.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        to="/create"
      >
        <button
          className="button"
        >
          Add Expense
        </button>
      </Link>
    </div>
  </div>
</div>
`;

exports[`Should return 2 expenses with a total of 80000 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $800.00
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        to="/create"
      >
        <button
          className="button"
        >
          Add Expense
        </button>
      </Link>
    </div>
  </div>
</div>
`;
